--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "3aa1cbba-843e-4241-8fb7-ba4e74b279d1",
   "name": "The Coatinc Company Holding GmbH",
-  "publisher": "Markmann + Müller Datensysteme GmbH",
+  "publisher": "CO - M.Holkamp",
   "version": "26.0.360637.15",
   "application": "26.0.0.0",
   "platform": "26.0.0.0",
