--- a/app.json
+++ b/app.json
@@ -2,9 +2,10 @@
   "id": "3aa1cbba-843e-4241-8fb7-ba4e74b279d1",
   "name": "The Coatinc Company Holding GmbH",
   "publisher": "M.Holkamp",
-  "version": "27.26.0128.02",
+  "version": "27.26.0203.01",
   "application": "27.0.0.0",
   "platform": "27.0.0.0",
+  "preprocessorSymbols": ["Publish"],
   "screenshots": [],
   "dependencies": [
    {
